--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.34",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.476.0",
     "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
